<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingBottom="16dp"
    android:scrollbars="none"
    tools:context=".DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/name_user_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/opensansbold"
            android:text="@string/name_user"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/avatar_detail"
            app:layout_constraintTop_toBottomOf="@+id/avatar_detail" />

        <TextView
            android:id="@+id/company_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/company"
            android:fontFamily="@font/opensansreguler"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@+id/name_user_detail"
            app:layout_constraintTop_toBottomOf="@+id/name_user_detail" />

        <TextView
            android:id="@+id/location_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:fontFamily="@font/opensansreguler"
            app:layout_constraintStart_toStartOf="@+id/company_detail"
            app:layout_constraintTop_toBottomOf="@+id/company_detail" />

        <TextView
            android:id="@+id/following_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/opensansreguler"
            android:text="@string/following"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="19sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textView4"
            app:layout_constraintEnd_toEndOf="@+id/textView4"
            app:layout_constraintStart_toStartOf="@+id/textView4" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/opensansreguler"
            android:text="@string/txt_following"
            android:textAlignment="center"
            android:textColor="#000000"
            app:layout_constraintEnd_toStartOf="@+id/textView6"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/follower_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/opensansreguler"
            android:text="@string/follower"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="19sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textView6"
            app:layout_constraintEnd_toEndOf="@+id/textView6"
            app:layout_constraintStart_toStartOf="@+id/textView6" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:fontFamily="@font/opensansreguler"
            android:text="@string/txt_follower"
            android:textAlignment="center"
            android:textColor="#000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/avatar_detail"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/repository_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/opensansreguler"
            android:text="@string/repository"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="19sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textView8"
            app:layout_constraintEnd_toEndOf="@+id/textView8"
            app:layout_constraintStart_toStartOf="@+id/textView8" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="60dp"
            android:fontFamily="@font/opensansreguler"
            android:text="@string/txt_repository"
            android:textAlignment="center"
            android:textColor="#000000"
            app:layout_constraintStart_toEndOf="@+id/textView6"
            app:layout_constraintTop_toTopOf="parent" />


        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/location_detail"
            tools:layout_editor_absoluteX="16dp">

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/opensansreguler"
                app:tabGravity="fill"
                app:tabInlineLabel="true"
                app:tabMode="fixed"
                app:tabSelectedTextColor="@color/dark_3"
                app:tabTextColor="@android:color/darker_gray" />

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/avatar_detail"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/circle_background"
            android:paddingStart="8dp"
            android:paddingTop="8dp"
            android:paddingEnd="8dp"
            android:paddingBottom="8dp"
            android:src="@android:color/darker_gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            android:id="@+id/progressBar_detail"
            style="?android:attr/progressBarStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@+id/avatar_detail"
            app:layout_constraintEnd_toEndOf="@+id/avatar_detail"
            app:layout_constraintStart_toStartOf="@+id/avatar_detail"
            app:layout_constraintTop_toTopOf="@+id/avatar_detail" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

