<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">
                <LinearLayout
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="240dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/txt_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/name_user"
                            android:textColor="#FF5410"
                            android:textSize="24dp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/txt_username"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/name_user"
                            android:textColor="#D5FF5410"
                            android:textSize="12dp"
                            android:textStyle="bold" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="14dp">

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="20dp"
                                android:orientation="vertical">

                                <TextView
                                    android:id="@+id/txt_follower"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:text="@string/follower"
                                    android:textColor="#E15F94B6"
                                    android:textSize="20dp"
                                    android:textStyle="bold" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:text="Follower"
                                    android:textColor="#050505"
                                    android:textSize="14dp"
                                    android:textStyle="normal" />

                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="10dp"
                                android:orientation="vertical">

                                <TextView
                                    android:id="@+id/txt_following"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:text="@string/follower"
                                    android:textColor="#E15F94B6"
                                    android:textSize="20dp"
                                    android:textStyle="bold" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:text="Following"
                                    android:textColor="#050505"
                                    android:textSize="14dp"
                                    android:textStyle="normal" />

                            </LinearLayout>
                        </LinearLayout>

                    </LinearLayout>

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/img_photo"
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        tools:src="@android:color/darker_gray" />

                </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txt_company"
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="30dp"
                    android:text="@string/company" />
                <TextView
                    android:id="@+id/txt_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/location"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>